 - Fixed events about Donbas (was missed Luhansk state in uprising and return Donbas in Ukraine)
 - Fixed revolt events for Spanish missions
 - Fixed missing GFX for Saudi Prince, Paramilitary, Azerbaijani Wester Drift Idea
 - Fixed carrier engineering blueprint
 - Fixed missing technologies for Netherlands and Ukraine
 - Karabakh now should have Non State Actor idea instead of Aspiring State

Localisation:
 - Spanish localization improvements for the tree
 - Fixed spelling/grammar for USA, Azerbaijan and Italy focus tree
 - Fixed localisation for event Quebec Supports the Government
 - Fixed localisation for Battleship technology
 - Fixed missing title for module category about engines in naval designer

v1.7 - Make Millennium Dawn Great Again

AI:
 - Improved Generic Tree AI
 - Economic AI should now evaluate taxes and raise and lower as needed
 - AI will produce better units
 - AI will now invest in infrastructure
 - AI will invest until 6% interest rate and then stop to focus on debt maintenance
 - AI will now produce equipment more effectively to provide a more robust AI
 - AI in Africa and Western ENG should no longer support the Nigerian Caliphate
 - Nigeria has a couple additional AI strategies to be more dominant in the ECOAWS region
 - Nigeria's AI should be a bit more dynamic now
 - AI should be more aggressive at paying down debt
 - Russia should have better war declaration AI

Balance:
 - Econ Cycle Upgrade is now 7.50% of your current GDP
 - Healthcare/Social Spending are now more expensive for lower GDP/C nations
 - Rebalanced Cost and gain from certain Afghan focuses
 - Rebalanced Afghanistan Tribal Culture to not be too punishing now that other PP
 - Reduced influence from SCO decisions

Bugfixes:
 - AFG "Claim Pakistani Paschustani" reworked
 - Adjusted Special Forces Tree and NVG position
 - AFG Our Nation Recovered Bug Taliban Could Not Complete Focus
 - Generic Tree Infrastructure and Radar Station focuses can now be bypassed