@@ -21,6 +21,7 @@ research_slots_decisions = {
 			add_to_variable = { research_slots_from_gdp = 1 }
 			add_to_variable = { next_slot_from_gdp = 1 }
 			medium_expenditure = yes
+			calculate_new_education_spending_tooltip = yes
 		}
 	}
 
@@ -46,6 +47,7 @@ research_slots_decisions = {
 			add_to_variable = { research_slots_from_gdp_c = 1 }
 			add_to_variable = { next_slot_from_gdp_c = 1 }
 			medium_expenditure = yes
+			calculate_new_education_spending_tooltip = yes
 		}
 	}
 
