@@ -1329,7 +1329,6 @@ update_education_rate = {
 	multiply_temp_variable = { research_slot_mod = amount_research_slots }
 	add_to_temp_variable = { research_slot_mod = research_slot_initial }
 	set_variable = { research_slot_modifier = research_slot_mod }
-	set_variable = { education_cost_research_multiplier_display = research_slot_modifier }
 
 	#Education spending is more expensive for poor countries - linear approximation with -0.086 * GDP/C + 2.182
 	set_temp_variable = { gdp_education_cost_modifier = gdp_per_capita }
@@ -1349,6 +1348,7 @@ update_education_rate = {
 	#Additional additive modifiers
 	set_temp_variable = { education_cost_multiplier = 1 }
 	add_to_temp_variable = { education_cost_multiplier = modifier@education_cost_multiplier_modifier }
+	add_to_temp_variable = { education_cost_multiplier = research_slot_modifier }
 
 	for_each_loop = {
 		array = array_education_spend
@@ -2248,4 +2248,14 @@ calculate_ai_corporate_taxes_desire = {
 		}
 		set_variable = { ai_change_corporate_taxes = mather }
 	}
+}
+
+calculate_new_education_spending_tooltip = {
+	set_temp_variable = { research_slot_initial = -0.2 }
+	set_temp_variable = { research_slot_tot = amount_research_slots }
+	add_to_temp_variable = { research_slot_tot = 1 }
+	multiply_temp_variable = { research_slot_tot = 0.04 }
+	add_to_temp_variable = { research_slot_tot = research_slot_initial }
+
+	custom_effect_tooltip = calculate_new_education_spending_tt
 }
