@@ -81,7 +81,7 @@
  EDUCATION_EXPENSE: "§JEducation:§!"
  EDUCATION_RATE: "$$§R[?education_gain|-3]§!"
  EDUCATION_EXPENSE_TOOLTIP: "Education Spending"
- EDUCATION_EXPENSE_TOOLTIP_DELAYED: "Education spending is how much we use money to fund both public and private schools, research and education. The base cost of education is based on the total population of the country with every level of §YEducation Budget§! increasing the cost. In addition, countries with §YGDP per capita§! lower than §Y$15k§! will have increased education costs due poor readiness to provide education for its citizens.\n\nGDP/C impact on §YEducation Spending§!: [?education_cost_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YEducation Spending§!: [?education_cost_multiplier_display|-%0]\nAmount of research slots impact on §YEducation Spending§!: [?education_cost_research_multiplier_display|-%0]"
+ EDUCATION_EXPENSE_TOOLTIP_DELAYED: "Education spending is how much we use money to fund both public and private schools, research and education. The base cost of education is based on the total population of the country with every level of §YEducation Budget§! increasing the cost. In addition, countries with §YGDP per capita§! lower than §Y$15k§! will have increased education costs due poor readiness to provide education for its citizens.\n\nGDP/C impact on §YEducation Spending§!: [?education_cost_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YEducation Spending§!: [?education_cost_multiplier_display|-%0]\nAmount of research slots impact on §YEducation Spending§!: [?research_slot_modifier|-%0]"
  HEALTHCARE_EXPENSE: "§PHealth:§!"
  HEALTHCARE_RATE: "$$§R[?health_gain|-3]§!"
  HEALTHCARE_EXPENSE_TOOLTIP: "Health Spending"
