@@ -1,12 +1,13 @@
 ﻿l_english:
  research_slots_decisions: "Research Slots"
- research_slots_decisions_desc: "Research capability of our country is determined by two factors: total industry size (GDP) and development level (GDP/c).        \n\nResearch slots from industry size: [?research_slots_from_gdp|C.0] (GDP required: $$[?GLOBAL.gdp_slot^research_slots_from_gdp|Y0] b)\nResearch slots from development level: [?research_slots_from_gdp_c|C.0] (GDP/c required: $$[?GLOBAL.gdp_c_slot^research_slots_from_gdp_c|Y0] k)         [research_slots_status]    \n\nOur education spending is increased by [?education_cost_research_multiplier_display|.0%] due to our amount of research slots."
+ research_slots_decisions_desc: "Research capability of our country is determined by two factors: total industry size (GDP) and development level (GDP/c).        \n\nResearch slots from industry size: [?research_slots_from_gdp|C.0] (GDP required: $$[?GLOBAL.gdp_slot^research_slots_from_gdp|Y0] b)\nResearch slots from development level: [?research_slots_from_gdp_c|C.0] (GDP/c required: $$[?GLOBAL.gdp_c_slot^research_slots_from_gdp_c|Y0] k)         [research_slots_status]    \n\nOur education spending is increased by [?research_slot_modifier|.0%] due to our amount of research slots. The eduaction spending increase from research slots is (0.04 * x) - 0.02 where x is your research slots."
  gdp_gain_slot: "Expand Laboratories"
  #gdp_gain_slot: "Next slot from GDP at: $$[?GLOBAL.gdp_slot^next_slot_from_gdp|Y0] b"
  gdp_gain_slot.tt: "GDP ($$[?gdp_total_display|Y] b) > $$[?GLOBAL.gdp_slot^next_slot_from_gdp|Y0] b"
  gdp_c_gain_slot: "Upgrade Laboratory Equipment"
  #gdp_c_gain_slot: "Next slot from GDP/c at: $$[?GLOBAL.gdp_c_slot^next_slot_from_gdp_c|Y0] k"
  gdp_c_gain_slot.tt: "GDP/c ($$[?gdp_per_capita|Y] k) > $$[?GLOBAL.gdp_c_slot^next_slot_from_gdp_c|Y0] k"
+ calculate_new_education_spending_tt: "After we gain a new research slot our new education spending increase will be: [?research_slot_tot|%0R].\n"
 
  gdp_remove_slot: "Shut Down Laboratories"
  gdp_remove_slot.tt: ""
