@@ -30,6 +30,7 @@ Bugfixes:
  - Fixed carrier engineering blueprint
  - Fixed missing technologies for Netherlands and Ukraine
  - Karabakh now should have Non State Actor idea instead of Aspiring State
+ - Fixed research slots not correctly costing anything
 
 Localisation:
  - Spanish localization improvements for the tree
@@ -37,6 +38,9 @@ Localisation:
  - Fixed localisation for event Quebec Supports the Government
  - Fixed localisation for Battleship technology
  - Fixed missing title for module category about engines in naval designer
+
+Quality of Life (QoL):
+ - Explained how the education cost from research slots is calculated and added a utility script into the decision so you can see exactly how much it will increase cost by one slot.
 
 v1.7 - Make Millennium Dawn Great Again
 
